# rinha-backend-python-2024-q1

./: .gitignore  docker-compose.yml
api/: main.py  pyproject.toml
api/db/: database.py  init.sql
api/endpoints/: client.py
api/interfaces/: responses.py  transaction.py
